# src/model/api/series/ISeriesBackfillApiModel.ts
@@ -1,0 +1,17 @@
+import * as apid from '../../../../api';
+export type SeriesBackfillOption = apid.SeriesBackfillOption;
+export type SeriesBackfillResult = apid.SeriesBackfillResult;
+export default interface ISeriesBackfillApiModel {
+    /**
+     * 既存録画のシリーズ化バックフィルを開始する (実行中の場合は現在の状態を返すのみ)
+     */
+    start(option: SeriesBackfillOption): Promise<SeriesBackfillResult>;
+    /**
+     * バックフィルの進捗状況を取得する
+     */
+    getStatus(): Promise<SeriesBackfillResult>;
+    /**
+     * 実行中のバックフィルをキャンセルする
+     */
+    cancel(): Promise<void>;
+}
